--- a/V2RayX/Base.lproj/MainMenu.xib
+++ b/V2RayX/Base.lproj/MainMenu.xib
@@ -14,13 +14,17 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
+                <outlet property="editPacMenu" destination="3NY-51-bgh" id="dgA-Xq-mKn"/>
                 <outlet property="enabelV2rayItem" destination="I9I-uu-xak" id="b3P-ct-RqE"/>
                 <outlet property="globalModeItem" destination="12u-76-Ytb" id="RA8-m2-Iv6"/>
                 <outlet property="manualModeItem" destination="P4q-kj-6fs" id="5XH-9p-w3e"/>
+                <outlet property="pacListMenu" destination="25R-TF-TBx" id="xGh-bJ-AGG"/>
                 <outlet property="pacModeItem" destination="Cm9-3e-L2z" id="TlL-GV-776"/>
+                <outlet property="pacsItem" destination="PnH-bh-qnf" id="AQr-LV-TvQ"/>
                 <outlet property="serverListMenu" destination="pPD-dn-4h0" id="6sH-L6-Uzx"/>
                 <outlet property="serversItem" destination="3wi-Co-2Kd" id="kKi-8l-dDJ"/>
                 <outlet property="statusBarMenu" destination="yZm-2L-r3v" id="3iW-vb-TOn"/>
+                <outlet property="stupidSepy" destination="lQU-65-XjU" id="hMg-f2-sa1"/>
                 <outlet property="v2rayRulesItem" destination="bUi-AV-IfA" id="p4V-ny-gh7"/>
                 <outlet property="v2rayStatusItem" destination="EFa-yl-fQC" id="z3V-zp-jw7"/>
             </connections>
@@ -723,11 +727,9 @@
                         <action selector="showConfigWindow:" target="Voe-Tx-rLC" id="jVU-tA-mPz"/>
                     </connections>
                 </menuItem>
-                <menuItem title="Edit pac file" id="3NY-51-bgh">
+                <menuItem title="pac file" id="PnH-bh-qnf" userLabel="pac file">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="editPac:" target="Voe-Tx-rLC" id="4jX-Hv-SpU"/>
-                    </connections>
+                    <menu key="submenu" title="pac file" id="yno-KX-HOj"/>
                 </menuItem>
                 <menuItem title="View log" id="5Vg-qU-2V2">
                     <modifierMask key="keyEquivalentModifierMask"/>
@@ -780,8 +782,13 @@
         <menu title="ServerList" id="pPD-dn-4h0">
             <point key="canvasLocation" x="445" y="279.5"/>
         </menu>
-        <menuItem title="Item" id="Gg2-Qw-2CF">
+        <menuItem title="Edit pac file" id="3NY-51-bgh">
             <modifierMask key="keyEquivalentModifierMask"/>
+            <connections>
+                <action selector="editPac:" target="Voe-Tx-rLC" id="4jX-Hv-SpU"/>
+            </connections>
         </menuItem>
+        <menuItem isSeparatorItem="YES" id="lQU-65-XjU"/>
+        <menu id="25R-TF-TBx" userLabel="Pac List Menu"/>
     </objects>
 </document>
